[package]
name = "rustuserserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.14.0"
jsonwebtoken = "8.3.0"
mini-redis = "0.4.1"
serde = "1.0.164"
tokio = {version = "1", features =["full"]}
warp = "0.3.5"
