[package]
name = "rustuserserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
jsonwebtoken = "8.3.0"
mini-redis = "0.4.1"
mongodb = "2.6.0"
serde = "1.0.164"
tokio = {version = "1", features =["full"]}
warp = "0.3.5"
uuid = {version = "1.4.1", features = ["serde", "v4"]}

